# HandFlow

./: .gitignore  README.md  RESUME_NOTES.md  gesture_mapping.json  main.py  pyproject.toml  requirements.txt  test.py
Experiment_notebooks/: 01_eda.ipynb  02_data_exploration.ipynb  03_feature_engineering.ipynb  04_model_exploration.ipynb  05_model_evaluation.ipynb  visualizer.ipynb
ModelTraining/: HandKey.ipynb  left_action.h5  right_action.h5
ModelTraining/.ipynb_checkpoints/: HandKey-checkpoint.ipynb
ModelTraining/Logs/train/: events.out.tfevents.1757644883.Huynhs-MacBook-Pro.local.86523.0.v2  events.out.tfevents.1757644905.Huynhs-MacBook-Pro.local.86523.1.v2  events.out.tfevents.1758388557.Huynhs-MacBook-Pro.local.56078.0.v2  events.out.tfevents.1758388574.Huynhs-MacBook-Pro.local.56078.1.v2  events.out.tfevents.1758389353.Huynhs-MacBook-Pro.local.56078.2.v2  events.out.tfevents.1758402022.Huynhs-MacBook-Pro.local.56078.3.v2  events.out.tfevents.1758721744.Huynhs-MacBook-Pro.local.48752.0.v2  events.out.tfevents.1758722298.Huynhs-MacBook-Pro.local.48752.1.v2  events.out.tfevents.1758729923.Huynhs-MacBook-Pro.local.51700.0.v2  events.out.tfevents.1758748723.Huynhs-MacBook-Pro.local.51700.1.v2  events.out.tfevents.1758847317.Huynhs-MacBook-Pro.local.5937.0.v2  events.out.tfevents.1759538725.Huynhs-MacBook-Pro.local.52930.0.v2  events.out.tfevents.1759546301.Huynhs-MacBook-Pro.local.52930.1.v2  events.out.tfevents.1759546655.Huynhs-MacBook-Pro.local.52930.2.v2  events.out.tfevents.1759594010.Huynhs-MacBook-Pro.local.52930.3.v2  events.out.tfevents.1759594155.Huynhs-MacBook-Pro.local.52930.4.v2  events.out.tfevents.1759594294.Huynhs-MacBook-Pro.local.52930.5.v2  events.out.tfevents.1759596114.Huynhs-MacBook-Pro.local.52930.6.v2  events.out.tfevents.1759601298.Huynhs-MacBook-Pro.local.52930.7.v2  events.out.tfevents.1759702383.Huynhs-MacBook-Pro.local.52930.8.v2  events.out.tfevents.1759702891.Huynhs-MacBook-Pro.local.52930.9.v2  events.out.tfevents.1761096304.Huynhs-MacBook-Pro.local.47142.0.v2  events.out.tfevents.1761096823.Huynhs-MacBook-Pro.local.47142.1.v2  events.out.tfevents.1761436390.Huynhs-MacBook-Pro.local.45203.0.v2  events.out.tfevents.1761436814.Huynhs-MacBook-Pro.local.45203.1.v2  events.out.tfevents.1761657075.Huynhs-MacBook-Pro.local.65622.0.v2  events.out.tfevents.1761657436.Huynhs-MacBook-Pro.local.65622.1.v2  events.out.tfevents.1761657586.Huynhs-MacBook-Pro.local.65622.2.v2  events.out.tfevents.1762101712.Huynhs-MacBook-Pro.local.96858.0.v2
benchmarks/: BENCHMARK_TESTS.md  QUICK_BENCHMARK.md
config/: aruco_calibration.example.yaml  aruco_calibration.yaml  config.yaml  handflow_setting.yaml
docs/: EXPERIMENT_TRACKING_GUIDE.md  GUIDE.md  ML_ENGINEERING_GUIDE.md
models/: hand_action.keras  hand_action.tflite
models/checkpoints/: gru_20260113_165830_best.h5  gru_20260114_160826_best.h5  lstm_20260201_221044_best.h5  lstm_20260201_223436_best.h5  lstm_20260202_173520_best.h5  lstm_20260202_191013_best.h5  lstm_20260202_205452_best.h5  lstm_20260202_230042_best.h5  lstm_20260203_092345_best.h5  lstm_20260203_100103_best.h5  tcn_20260119_185655_best.h5  tcn_20260119_190054_best.h5  tcn_20260119_202750_best.h5  tcn_20260119_204420_best.h5  tcn_20260119_205600_best.h5  tcn_20260119_205924_best.h5  tcn_20260119_210315_best.h5  tcn_20260119_222921_best.h5  tcn_20260119_235641_best.h5  tcn_20260120_103117_best.h5  tcn_20260120_104503_best.h5  tcn_20260120_104705_best.h5  tcn_20260120_105220_best.h5  tcn_20260120_111425_best.h5  tcn_20260201_220227_best.h5  tcn_20260203_100402_best.h5  transformer_20260114_151012_best.h5  transformer_20260114_151043_best.h5  transformer_20260114_151933_best.h5  transformer_20260114_181321_best.h5  transformer_20260114_181353_best.h5  transformer_20260114_181807_best.h5  transformer_20260114_235313_best.h5  transformer_20260115_000735_best.h5  transformer_20260115_002121_best.h5  transformer_20260115_102756_best.h5  transformer_20260115_103945_best.h5  transformer_20260115_104048_best.h5  transformer_20260116_222927_best.h5  transformer_20260116_223104_best.h5  (+15 more)
scripts/: benchmark_inference.py  benchmark_tflite.py  collect_data.py  dataset.py  evaluation_dashboard.ipynb  export.py  process_video.py  train.py
src/handflow/: __init__.py  cli.py
src/handflow/actions/: __init__.py  action_executor.py  mouse_controller.py  scroller.py
src/handflow/app/: __init__.py  app.py  detection_window.py  (+3 more)
templates/: cv_demo.py  opencv_snippets.py  reference.txt
test/: cv_demo.py  debugger.py  input_templates.html  opencv_demo.py  rectangle_values.txt  reference.txt
tests/: conftest.py  precision_test.html  test_calibration_migration.py  verify_features_new.py
tests/unit/: test_architectures.py  test_config.py  test_feature_engineer.py  test_predictor.py
(+45731 files in other folders)
